--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"> -->
     <title>React Nav Bar</title>
   </head>
-  <body>
+  <body style= "margin: 0px;">
     <div id="navigation_bar"> </div>
     <div id="navigation_bar2"> </div>
     <div id="navigation_bar3"> </div>
